# aws-selenium

./: pyproject.toml  scraper.py
