[tool.poetry]
name = "repl_python3_aws-selenium"
version = "0.1.0"
description = ""
authors = ["sethblumer1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
chromedriver-py = "^97.0.4692"
bs4 = "^0.0.1"
pandas = "^1.4.0"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
